maybe fix roomscanned getting called 400 times per room